Refactored and improved the check and config logic