@@ -2,6 +2,7 @@ package com.strealex.totemguard.discord;
 
 import com.strealex.totemguard.TotemGuard;
 import com.strealex.totemguard.config.Settings;
+import org.jetbrains.annotations.Blocking;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 
@@ -16,71 +17,83 @@ import java.util.List;
 import java.util.Map;
 
 public class DiscordWebhook {
-    private static final Settings settings = TotemGuard.getInstance().getConfigManager().getSettings();
+
     private static final HttpClient httpClient = HttpClient.newHttpClient();
 
+    @Blocking
     public static void sendWebhook(Map<String, String> placeholders) {
-        if (!settings.getWebhook().isEnabled()) return;
+        Settings settings = TotemGuard.getInstance().getConfigManager().getSettings();
+        Settings.Webhook webhookConfig = settings.getWebhook();
 
-        try {
-            sendWebhook(
-                    settings.getWebhook().getUrl(),
-                    settings.getWebhook().getName(),
-                    settings.getWebhook().getColor(),
-                    settings.getWebhook().getTitle(),
-                    List.of(settings.getWebhook().getDescription()),
-                    settings.getWebhook().getImage(),
-                    settings.getWebhook().getProfileImage(),
-                    settings.getWebhook().isTimestamp(),
-                    placeholders
-            );
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        String replacedDescription = getReplacedDescription(webhookConfig, placeholders);
+        String replacedImage = getReplacedImage(webhookConfig, placeholders);
+
+        JSONObject json = createWebhookPayload(webhookConfig, replacedDescription, replacedImage);
+
+        HttpRequest request = buildHttpRequest(webhookConfig, json);
+
+        HttpResponse<String> response = sendHttpRequest(request);
+        validateResponse(response);
     }
 
-    private static void sendWebhook(String url, String name, String color, String title, List<String> descriptionLines, String image, String profileImage, boolean timestamp, Map<String, String> placeholders) throws IOException {
-        List<String> replacedDescriptionLines = Placeholders.replacePlaceholders(descriptionLines, placeholders);
-        String replacedDescription = Placeholders.joinMessages(replacedDescriptionLines);
-        String replacedImage = Placeholders.replacePlaceholders(Collections.singletonList(image), placeholders).get(0);
+    private static String getReplacedDescription(Settings.Webhook webhookConfig, Map<String, String> placeholders) {
+        List<String> descriptionLines = Placeholders.replacePlaceholders(List.of(webhookConfig.getDescription()), placeholders);
+        return Placeholders.joinMessages(descriptionLines);
+    }
 
+    private static String getReplacedImage(Settings.Webhook webhookConfig, Map<String, String> placeholders) {
+        return Placeholders.replacePlaceholders(Collections.singletonList(webhookConfig.getImage()), placeholders).get(0);
+    }
+
+    private static JSONObject createWebhookPayload(Settings.Webhook webhookConfig, String description, String imageUrl) {
         JSONObject json = new JSONObject();
-        json.put("username", name);
-        json.put("avatar_url", profileImage);
+        json.put("username", webhookConfig.getName());
+        json.put("avatar_url", webhookConfig.getProfileImage());
 
         JSONObject embed = new JSONObject();
-        embed.put("title", title);
-        embed.put("description", replacedDescription);
-        embed.put("color", Integer.parseInt(color.replace("#", ""), 16));
-        embed.put("thumbnail", new JSONObject().put("url", replacedImage));
+        embed.put("title", webhookConfig.getTitle());
+        embed.put("description", description);
+        embed.put("color", parseColor(webhookConfig.getColor()));
+        embed.put("thumbnail", new JSONObject().put("url", imageUrl));
 
-        if (timestamp) {
+        if (webhookConfig.isTimestamp()) {
             embed.put("timestamp", Instant.now().toString());
         }
 
-        JSONArray embeds = new JSONArray();
-        embeds.add(embed);
-        json.put("embeds", embeds);
+        json.put("embeds", new JSONArray().add(embed));
 
-        String jsonString = json.toJSONString();
+        return json;
+    }
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(url))
+    private static int parseColor(String color) {
+        return Integer.parseInt(color.replace("#", ""), 16);
+    }
+
+    private static HttpRequest buildHttpRequest(Settings.Webhook webhookConfig, JSONObject json) {
+        return HttpRequest.newBuilder()
+                .uri(URI.create(webhookConfig.getUrl()))
                 .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(jsonString))
+                .POST(HttpRequest.BodyPublishers.ofString(json.toJSONString()))
                 .build();
+    }
 
-        HttpResponse<String> response = null;
-
+    private static HttpResponse<String> sendHttpRequest(HttpRequest request) {
         try {
-            response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
+            return httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+        } catch (InterruptedException | IOException e) {
+            TotemGuard.getInstance().getLogger().warning("Failed to send Webhook request");
+            return null;
+        }
+    }
+
+    private static void validateResponse(HttpResponse<String> response) {
+        if (response == null) {
+            TotemGuard.getInstance().getLogger().warning("Failed to send webhook, response is null");
         }
 
-        if (response.statusCode() != 200 && response.statusCode() != 204) {
-            throw new IOException("Unexpected response code " + response.statusCode() + ": " + response.body());
+        int statusCode = response.statusCode();
+        if (statusCode != 200 && statusCode != 204) {
+            TotemGuard.getInstance().getLogger().warning("Failed to send webhook, status code: " + statusCode);
         }
     }
 }
-
